# object-system-prototyping

./: .gitignore  Cargo.toml  README.md  diagmetr.tif
.github/workflows/: rust.yml
src/: magic_identify.rs  main.rs  object.rs
src/object/: builders.rs  mod.rs
