[package]
name = "object-system-prototyping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kamadak-exif = "0.5.5"
nom = "7"
image = {version = "0.24", default-features = false, features = ["tiff"]}
serde_json = "1"
rfd = "0.12"
hex = "0.4"

eframe = "0.22"
egui_extras = {version = "0.22", features = ["image"]}
env_logger = "0.10"

[dependencies.serde]
version = "1.0"
features = ["derive"]
